# sharescreen

./: .gitignore  README  README.md
CyberLink/: .project  AndroidManifest.xml
CyberLink/res/values/: strings.xml
Phone/: .project  AndroidManifest.xml  project.properties  tags
Phone/assets/: 313k.flac
Phone/jni/WiRemote/: Android.mk  common.h  jni_register.c  sensor_grab.c  sensor_grab.h  touch_handle.c  tp2all.c  wi_remote.c  wi_remote.h
Phone/jni/aShareSDK/: Android.mk  README  aShareStick_jni.c  display  hw_encode  protocol  service  sw_encode  utils
Phone/res/anim/: loading_progress_anim.xml  progress_bar_anim.xml  pull_right_in.xml
Phone/res/color/: more_option_text_first.xml  more_option_text_second.xml
Phone/res/drawable/: app_apoint_sel.xml  app_default_sel.xml  btn_add_sel.xml  btn_local_connection_sel.xml  btn_media_list.xml  btn_media_mute.xml  btn_media_next.xml  btn_media_prev.xml  btn_media_stop.xml  btn_music.xml  (+56 more)
Stb/: .classpath  .project  AndroidManifest.xml  project.properties
Stb/jni/: Application.mk
Stb/jni/Airtunes/airtuneslib/libshairport-1.2.0.20310/: ._INSTALL  ._README  ._configure.in  configure.in
Stb/jni/Airtunes/airtuneslib/libshairport-1.2.0.20310/src/: ._Makefile.am  ._hairtunes.c  ._socketlib.c  .hairtunes.c.swp  Makefile.am  alac.c  alac.h  ao.h  hairtunes.c  hairtunes.h  shairport.c  shairport.h  shairport_private.h  socketlib.c  socketlib.h
Stb/jni/Airtunes/airtuneslib/libshairport-1.2.0.20310/src/alac_decoder/: main.c
VitamioBundle/: .project  AndroidManifest.xml
aShareNetwork/: .project  AndroidManifest.xml
(+629 files in other folders)
